--- a/gb/21/6/29/n13054366.md
+++ b/gb/21/6/29/n13054366.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rskgqd324/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rskgqd324/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rskgqd324/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rskgqd324/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>澳举办“天下围共 百年送终”主题网络集会 ?</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>澳洲举办“天下围共 百年送终”网络集会 ?</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061948-a3723950e065769605516c89be7a7762-600x400.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2021年07月02日讯】（大纪元记者夏楚君澳洲悉尼报导）7月1日晚，在西来赤匪党成立百年之际，澳洲多家团体联合举办了“天下围共 百年送终”主题的网络集会。中国问题学者、受中共政治与宗教迫害的不同团体代表、民运人士、港陆学生代表在集会上发言，揭露中共反人类罪，警醒世界认清中共本质，呼吁全民共同终结<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%9A%B4%E6%94%BF.md#1">中共暴政</a>。</p>
+<p>【大纪元2021年07月02日讯】（大纪元记者夏楚君<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼报导）7月1日晚，在西来赤匪党成立百年之际，澳洲多家团体联合举办了主题为“天下围共 百年送终”的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%91%E7%BB%9C%E9%9B%86%E4%BC%9A.md#1">网络集会</a>。中国问题学者、受中共政治与宗教迫害的不同团体代表、民运人士、港陆学生代表在集会上发言，揭露中共反人类罪，警醒世界认清中共本质，呼吁全民共同终结<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%9A%B4%E6%94%BF.md#1">中共暴政</a>。</p>
 <h2>中国问题专家：中共应向中国及世界人民忏悔</h2>
-<figure id="attachment_13061895" aria-describedby="caption-attachment-13061895" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13061895-e34257dbf2f55892ceeb96e6ef075119.jpg"><img class="size-large wp-image-13061895" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061895-e34257dbf2f55892ceeb96e6ef075119-600x342.jpg" alt="" width="600" b="342" /></a><figcaption id="caption-attachment-13061895" class="wp-caption-text">7月1日晚，澳洲多家团体联合举办了“天下围共 百年送终”主题的网络集会。<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%85%B1%E4%BA%A7%E6%94%BF%E6%9D%83%E5%8F%97%E5%AE%B3%E8%80%85%E6%BE%B3%E7%BA%BD%E8%81%94%E7%9B%9F.md#1">中国共产政权受害者澳纽联盟</a>主席、悉尼科技大学冯崇义教授致开幕词。（网路会议视频截图）</figcaption></figure>
-<p><ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%85%B1%E4%BA%A7%E6%94%BF%E6%9D%83%E5%8F%97%E5%AE%B3%E8%80%85%E6%BE%B3%E7%BA%BD%E8%81%94%E7%9B%9F.md#1">中国共产政权受害者澳纽联盟</a>主席、悉尼科技大学冯崇义教授在致开幕词时表示：“中共所犯下的罪恶罄竹难书，中共应该做的唯一事情就是忏悔”。</p>
+<figure id="attachment_13061895" aria-describedby="caption-attachment-13061895" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13061895-e34257dbf2f55892ceeb96e6ef075119.jpg"><img class="size-large wp-image-13061895" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061895-e34257dbf2f55892ceeb96e6ef075119-600x342.jpg" alt="" width="600" b="342" /></a><figcaption id="caption-attachment-13061895" class="wp-caption-text">7月1日晚，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>多家团体联合举办了“天下围共 百年送终”主题的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%91%E7%BB%9C%E9%9B%86%E4%BC%9A.md#1">网络集会</a>。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%85%B1%E4%BA%A7%E6%94%BF%E6%9D%83%E5%8F%97%E5%AE%B3%E8%80%85%E6%BE%B3%E7%BA%BD%E8%81%94%E7%9B%9F.md#1">中国共产政权受害者澳纽联盟</a>主席、悉尼科技大学冯崇义教授致开幕词。（网路会议视频截图）</figcaption></figure>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%85%B1%E4%BA%A7%E6%94%BF%E6%9D%83%E5%8F%97%E5%AE%B3%E8%80%85%E6%BE%B3%E7%BA%BD%E8%81%94%E7%9B%9F.md#1">中国共产政权受害者澳纽联盟</a>主席、悉尼科技大学冯崇义教授在致开幕词时表示：“中共所犯下的罪恶罄竹难书，中共应该做的唯一事情就是忏悔”。</p>
 <p>冯教授说，中共应向大陆中国人、香港人、台湾人、藏人、维族人及全世界人忏悔，然后谢幕，退出历史舞台。</p>
-<p>他表示，中国已经沦陷在<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%9A%B4%E6%94%BF.md#1">中共暴政</a>之下70多年，越来越多的中国人认清了中共本质，和国际社会联手对付邪恶的中共政权，“习近平代表的统治集团已经面临穷途末路”。</p>
+<p>他表示，中国已经沦陷在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%9A%B4%E6%94%BF.md#1">中共暴政</a>之下70多年，越来越多的中国人认清了中共本质，和国际社会联手对付邪恶的中共政权，“习近平代表的统治集团已经面临穷途末路”。</p>
 <p>冯教授还在致闭幕词时说，“中共邪恶政权存在的本身是整个人类的耻辱，中共存在一天就对人类多一天危害”。中共祸害了中国人及国际社会，已成为“世界的公敌”，中共已经“内外交困”，“垂死挣扎”，“我们有责任尽快结束中共暴政”。</p>
 <h2>前香港立法议员：中共是民主世界最大的敌人</h2>
 <figure id="attachment_13061915" aria-describedby="caption-attachment-13061915" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13061915-Ted-HUI.jpg"><img class="size-large wp-image-13061915" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061915-Ted-HUI-600x343.jpg" alt="" width="600" b="343" /></a><figcaption id="caption-attachment-13061915" class="wp-caption-text">7月1日晚，澳洲多家团体联合举办了“天下围共 百年送终”主题的网络集会。前香港立法会议员许智峯在集会上发言。（网路会议视频截图）</figcaption></figure>
-<p>前香港立法会议员许智峯在网路集会上发言表示，7月1日是国殇日。他说，自去年7月1日，港版《国安法》实施以来，香港已经没有了言论、新闻自由，也没有了司法独立。</p>
+<p>前香港立法会议员许智峯在网路集会上发言表示，7月1日是国殇日。他说，自去年7月1日，“港版国安法”实施以来，香港已经没有了言论、新闻自由，也没有了司法独立。</p>
 <p>自《国安法》实施后，他在香港生活了5个月，其中连续3个月，他被上门拘捕，被落案起诉，被戴上手铐带到警署和法庭。他说，港人不知道哪一刻所拥有的自由就是最后一刻的自由，这是真真实实在香港发生的现状。</p>
 <p>他表示，《国安法》实施一年以来，颠覆了香港的民主常态，扭曲了港人相信的民主自由核心价值，铲除了香港的最好特质，将香港变成了一个不折不扣的警察国家，港府用恐惧、威胁和武力治港，成为典型的专制极权。</p>
 <p>他说，7月1日这一天，他的感想就是让人们认清中共是香港和全世界自由和民主的最大敌人，中共向全世界输出的是威胁，而不是贡献。</p>
@@ -29,63 +29,57 @@
 <figure id="attachment_13061988" aria-describedby="caption-attachment-13061988" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13061988-e0a2e42bc43d4620c8d2bcf610c2a828.jpg"><img class="size-large wp-image-13061988" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061988-e0a2e42bc43d4620c8d2bcf610c2a828-600x353.jpg" alt="" width="600" b="353" /></a><figcaption id="caption-attachment-13061988" class="wp-caption-text">7月1日晚，澳洲多家团体联合举办了“天下围共 百年送终”主题的网络集会。台湾资深媒体人苏拾莹在集会上发言。（网路会议视频截图）</figcaption></figure>
 <p>台湾资深媒体人苏拾莹发言表示，中共剥夺香港民主自由，使得大半的台湾人都觉醒了。中共的残暴统治，只会把台湾人越推越远，没有台湾人还愿意去申请中国护照。</p>
 <p>她说，去年年中，台湾智库针对台湾人做了一项民调，结果发现愿意当中国人的只剩下2%，拿台湾护照但愿意承认自己也是中国人的也已降到新低，只剩下三成。这与十年前，百分之七八十的台湾人都承认自己既是台湾人但也算是中国人，已有天壤之别。</p>
-<p>她还说，不久前，有网友做了一个街头访问，随机问台湾街头的年轻人： 如果出100万给你，你愿不愿意把台湾护照换成中国护照？结果，没有人愿意。价码一直加到一亿，还是没有人愿意。问他们为什么？回答都是不愿意拿现今在台湾享有的自由，去换没有自由的中国护照。去当中国人？那简直就是失去自由的代名词，再多钱也不换。</p>
-<p>她在结束发言时表示，愿中共政权早崩析，还香港与中国一个自由天空。</p>
+<p>她还说，不久前，有网民做了一个街头访问，随机问台湾街头的年轻人： 如果出100万给你，你愿不愿意把台湾护照换成中国护照？结果，没有人愿意。价码一直加到一亿，还是没有人愿意。问他们为什么？回答都是不愿意拿现今在台湾享有的自由，去换没有自由的中国护照。去当中国人？那简直就是失去自由的代名词，再多钱也不换。</p>
+<p>她在结束发言时表示，愿中共政权早崩解，还香港与中国一个自由天空。</p>
 <h2>中国留学生：中共的存在是人类的耻辱</h2>
-<figure id="attachment_13061995" aria-describedby="caption-attachment-13061995" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13061995-Nathan.jpg"><img class="size-large wp-image-13061995" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061995-Nathan-600x420.jpg" alt="" width="600" b="420" /></a><figcaption id="caption-attachment-13061995" class="wp-caption-text">7月1日晚，澳洲多家团体联合举办了“天下围共 百年送终”主题的网络集会。 中国在澳留学生楠杨（Nathan）在集会上发言。（网路会议视频截图）</figcaption></figure>
-<p>代表民主中国阵线发言的中国在澳留学生楠杨在发言中表示，中共的百年犯下的累累罪行，均构成联合国人权法案中的危害人类罪事实。中共是人类社会历史上最可怕、最邪恶的撒旦代理人，中共的存在是人类的耻辱，也是对人类文明最大的伤害！</p>
+<figure id="attachment_13061995" aria-describedby="caption-attachment-13061995" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13061995-Nathan.jpg"><img class="size-large wp-image-13061995" src="https://i.epochtimes.com/assets/uploads/2021/07/id13061995-Nathan-600x420.jpg" alt="" width="600" b="420" /></a><figcaption id="caption-attachment-13061995" class="wp-caption-text">7月1日晚，澳洲多家团体联合举办了“天下围共 百年送终”主题的网络集会。 中国在澳留学生徐楠杨（Nathan）在集会上发言。（网路会议视频截图）</figcaption></figure>
+<p>代表民主中国阵线发言的中国在澳留学生徐楠杨在发言中表示，中共的百年犯下的累累罪行，均构成联合国人权法案中的危害人类罪事实。中共是人类社会历史上最可怕、最邪恶的撒旦代理人，中共的存在是人类的耻辱，也是对人类文明最大的伤害！</p>
 <p>他说，共产主义就像一个幽灵，从苏联游荡到中国。中共自成立以来的100年里，数以亿计的无辜人民惨死其手。在国内，言论自由、新闻自由、迁徙自由、生育自由等被破坏，生命财产也得不到保障。 教育、医疗、就业通通成为压垮底层老百姓的稻草。为了追求经济的虚假繁荣，环境污染、食品不安全、毒奶粉、毒疫苗都成为杀死子孙后代的凶手。</p>
 <p>他认为，中共自知自己的政权得来不正，只要统治受到威胁便大开杀戒，基督教、法轮功、异见人士、人权律师和其他良心群体均被无情打压。六四天安门大屠杀完全破灭了中国人对民主改革的希望；在西藏、新疆，中共实行种族灭绝，修建集中营；计划生育导致 4 亿胎儿被谋杀； 在香港，他们撕毁中英联合声明，强行实施《国安法》，打压港人，破坏香港民主法治。</p>
 <p>针对蔓延全球的中共病毒已致近四百万人死亡的残酷事实，他呼吁说，消灭中共邪恶制度是自由世界的责任和义务，西方不应该单纯的追求利益，而对中共进行绥靖。澳洲作为对抗中共威胁表现最强硬的国家，有义务向国际社会呼吁联合对抗共产主义威胁，并以“普遍管辖权”起诉共产党犯下的反人类罪。</p>
 <p>责任编辑：宗敏青</p>
-<p><strong>了解更多<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%e6%be%b3%e6%b4%b2.md#1">澳洲</a>即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
+<p><strong>了解更多<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e6%be%b3%e6%b4%b2.md#1">澳洲</a>即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong>（本文未经许可不得转载或建立镜像网站）</strong></p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13046458.md#1">【翻墙必看】中共正在抹去丑恶党史</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13046499.md#1">基督徒公义联盟：清算中共百年反人类罪行</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/26/n13048820.md#1">美中国通：中共在焦虑中等待百年 时刻忧垮台</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/26/n13049750.md#1">揭中共百年丑恶 红二代：这场革命根本是错的</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/26/n13049869.md#1">【横河观点】百年“喜”事丧办 中共身份危机</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/2/n13062092.md#1">新州12人传染期内未隔离 州长促居民勿离家</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/2/n13062075.md#1">昆北10人合购彩票中强力球头奖 各赢600万</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/2/n13061938.md#1">澳三州欲大减归国者接纳量 新州仍保持3000</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/2/n13061909.md#1">新州警司没戴口罩被罚200 悉尼西南将被重点检查</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/2/n13061930.md#1">昆州新增3宗本地病例 布市封城再延24小时</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13046458.md#1">【翻墙必看】中共正在抹去丑恶党史</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13046499.md#1">基督徒公义联盟：清算中共百年反人类罪行</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13048820.md#1">美中国通：中共在焦虑中等待百年 时刻忧垮台</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13049750.md#1">揭中共百年丑恶 红二代：这场革命根本是错的</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13049869.md#1">【横河观点】百年“喜”事丧办 中共身份危机</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616236.md#1">首都政府拨款 协助俱乐部摆脱赌博经营模式</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616258.md#1">堪培拉家长频频报告快速抗原检测假阴性</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615668.md#1">澳警方查获藏匿在茶叶中毒品 价值5500万</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615922.md#1">新州副州长命令悉尼西北部大量居民撤离</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615744.md#1">新州请求总理额外援助 悉尼西南沿河居民被要求撤离</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/5/n2105459.md#1" target="_blank">纪实报告：法轮大法真相</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/10/n10291663.md#1" target="_blank">林辉：热爱自由的北大“右派”之出局人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/14/n13020876.md#1">【命理】功名有无 寿命长短 都是上天给的</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/26/n13048557.md#1">【方菲访谈】专访李有甫：从三星堆看史前文化</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13048015.md#1">【忠义传】义薄云天的华夏战神关羽</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/28/n13052640.md#1">自称预见中共肺炎肆虐 英国灵媒曝来年大事</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/1/n13061736.md#1">【秦鹏直播】蓬佩奥评中共百年：杀人民最多的党</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058903.md#1">【探索时分】以色列如何中东立足？五大理由</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/1/n13061709.md#1">【时事纵横】党庆多不祥之兆 拿14亿人当肉盾？</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058825.md#1">中共航母现硬伤？卫星拍到山东舰甲板严重破损</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056630.md#1">汤唯4岁女儿嫌天热 自己剪发获赞率性如妈妈</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058858.md#1">闫丽梦：丈夫来美协助中共 想让她消失</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056630.md#1">汤唯4岁女儿嫌天热 自己剪发获赞率性如妈妈</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13055192.md#1">“赚来干嘛 ” 柯宇纶膝盖超硬拒陆800万片酬</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056427.md#1">赵薇丈夫黄有龙被追欠款 连本带息近3亿港币</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13057680.md#1">力挺屏东家乡芒果 彭佳慧大气订102箱送亲友</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13059084.md#1">周杰伦香港演唱会四度延期 拟申请吉尼斯纪录</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/28/n13051973.md#1">这种睡姿最可怕？专家教3招 保持正确睡姿一整夜</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13055373.md#1">英国赛鸽比赛 上万只鸽子神秘失踪</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058574.md#1">Delta变种3大危险性！新症状、疫苗保护力一次看</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13057326.md#1">台湾捐款涌入立陶宛社福机构 报疫苗之恩</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13054854.md#1">美国男子在佛州拍到奇景 云层如波涛汹涌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rskgqd324/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rskgqd324/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/29/n13054366.htm">澳举办“天下围共 百年送终”主题网络集会 ?</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/29/n13054366.htm">澳洲举办“天下围共 百年送终”网络集会 ?</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13054366.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rskgqd324/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rskgqd324/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rskgqd324/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/6/29/n13054366.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
